# marshalrwr

./: .gitignore  Cargo.toml  README.md  marshalrwr.toml  notes.md  rust-toolchain.toml
src/: main.rs
src/app/: config.rs  errors.rs  hasher.rs  mod.rs  signalling.rs  state.rs  tracing.rs  util.rs  validated_query.rs
src/app/profile_server/: errors.rs  get.rs  json.rs  mod.rs  params.rs  set.rs  util.rs  validation.rs  xml.rs
src/entity/: Cargo.toml
src/entity/src/: account.rs  lib.rs  player.rs  prelude.rs  realm.rs
src/migration/: Cargo.toml
src/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230213_195206_create_realm_table.rs  m20230222_020006_create_player_table.rs  m20230223_212333_create_account_table.rs
test/: package_config.xml  run_test_server.py  start_marshalrwr_incursion.as  start_marshalrwr_test.as
