[package]
name = "marshalrwr"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
axum-macros = "0.3.2"
tokio = { version = "1.25.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
async-trait = "0.1.64"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
validator = { version = "0.16.0", features = ["derive", "unic"] }
lazy_static = "1.4.0"
regex = "1.7.1"

# [dependencies.surrealdb]
# version = "1.0.0-beta.8"
# default-features = false
# features = ["kv-rocksdb"]

[profile.release]
# panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
strip = true