[package]
name = "marshalrwr"
version = "0.1.0"
authors = ["MR. BANG"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
axum-macros = "0.3.2"
tokio = { version = "1.25.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
async-trait = "0.1.64"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
validator = { version = "0.16.0", features = ["derive", "unic"] }
lazy_static = "1.4.0"
regex = "1.7.1"
sea-orm = { version = "0.11.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
anyhow = "1.0.69"
figment = { version = "0.10.8", features = ["toml", "env"] }
subtle = "2.4.1"
moka = { version = "0.10.0", features = ["future"] }

migration = { path = "./src/migration" }
entity = { path = "./src/entity" }

[profile.release]
# panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
strip = true